
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devtool-usage-analytics"
version = "0.1.0"
description = "Analyze seat activation, retention, and workspace behaviors for developer-focused products."
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
